--- a/app/src/main/res/layout/controller_login.xml
+++ b/app/src/main/res/layout/controller_login.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/home_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <Button
-        android:id="@+id/action_button"
+        android:id="@+id/auth_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Invoke action"/>
-</FrameLayout>
+        android:text="Auth to Reddit"/>
+
+    <Button
+        android:id="@+id/get_toke_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Get token from reddit"/>
+</LinearLayout>
