--- a/app/src/main/res/menu/save.xml
+++ b/app/src/main/res/menu/save.xml
@@ -5,7 +5,7 @@
     tools:ignore="AlwaysShowAction">
 
     <item
-        android:id="@+id/about"
-        android:title="@string/about"
+        android:id="@+id/save"
+        android:title="@string/save"
         app:showAsAction="always" />
 </menu>
