--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="touch_raise">6dp</dimen>
     <dimen name="dialog_elevation">6dp</dimen>
     <dimen name="dialog_corners">2dp</dimen>
+    <dimen name="horizontal_progress_height">16dp</dimen>
 
 </resources>
