--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,20 +20,10 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
     </android.support.design.widget.AppBarLayout>
 
-    <ProgressBar
-        style="@android:style/Widget.Material.ProgressBar.Horizontal"
-        android:id="@+id/horizontal_progress"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/horizontal_progress_height"
-        android:layout_marginTop="-7dp"
-        android:indeterminate="true"
-        android:layout_below="@+id/appbar_layout"
-        android:visibility="gone"/>
-
     <com.bluelinelabs.conductor.ChangeHandlerFrameLayout
         android:id="@+id/controller_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/appbar_layout"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
